--- a/gameserver/config/server.properties
+++ b/gameserver/config/server.properties
@@ -8,7 +8,7 @@ GameserverPort = 7777
 
 # This is transmitted to the clients connecting from an external network, so it has to be a public IP or resolvable hostname
 # If this ip is resolvable by Login just leave *
-ExternalHostname = kingl2host.ddns.net
+ExternalHostname = 31.220.56.203
 
 # This is transmitted to the client from the same network, so it has to be a local IP or resolvable hostname.
 # If this ip is resolvable by Login just leave *
