--- a/login/config/loginserver.properties
+++ b/login/config/loginserver.properties
@@ -3,7 +3,7 @@
 #=============================================================
 
 # This is transmitted to the clients connecting from an external network, so it has to be a public IP or resolvable hostname
-ExternalHostname = kingl2host.ddns.net
+ExternalHostname = 31.220.56.203
 
 # This is transmitted to the client from the same network, so it has to be a local IP or resolvable hostname
 InternalHostname = 127.0.0.1
