--- a/gameserver/config/server.properties
+++ b/gameserver/config/server.properties
@@ -33,7 +33,7 @@ URL = jdbc:mysql://localhost/l2j
 #URL = jdbc:sqlserver://localhost/database=acis/user=sa/password=
 
 Login = root
-Password = 
+Password = aaasao3as
 
 # Maximum database connections (minimum 2, basically 10 if number under 10, default 100).
 MaximumDbConnections = 100
