--- a/login/config/loginserver.properties
+++ b/login/config/loginserver.properties
@@ -40,7 +40,7 @@ URL = jdbc:mysql://localhost/l2j
 #URL = jdbc:sqlserver://localhost/database=acis/user=sa/password=
 
 Login = root
-Password = 
+Password = aaasao3as
 
 MaximumDbConnections = 10
 
